Andando GoogleMaps place

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
     <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/>
 
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDziBmPwNzdB_5qng_WL-gybYsiGkYb6Eg&libraries=places"></script>
+
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
